:bug: Remove overflow: hidden

--- a/src/index.sass
+++ b/src/index.sass
@@ -12,7 +12,6 @@ $input-shadow: none
 body
   margin: 0
   font-family: 'FuraCode Nerd Font', 'Sukhumvit Set', sans-serif
-  overflow: hidden
   color: #fff
   background: #121212
 
